--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
   --primary-lighten: #b7f12e;
   --primary-darken: #6f8639;
   --bg: #e0d9d9;
-  --shadow: 2px 0 5px rgba(49, 49, 49, 0.5);
-  --corners: 0;
+  --shadow: 2px 0 10px rgba(49, 49, 49, 0.5);
+  --corners: 10px;
   --text-color: #3a3838;
   --dark: #3a3838;
   --dark-lighten: #504c4c;
@@ -81,6 +81,7 @@ button{
   cursor: pointer;
   padding: .5em;
 }
+
 button:focus{
   outline: none;
 }
@@ -138,7 +139,6 @@ button.btn-special:hover{
   width: 25%;
 }
 
-
 .top{
   position:fixed;
   top: 20%;
@@ -147,7 +147,6 @@ button.btn-special:hover{
 .shadow{
   filter: drop-shadow(var(--shadow));
 }
-
 
 .kitten img{
   filter: drop-shadow(2px 4px 6px #1b1b1b);
