--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ input{
   margin: 10px;
   padding: .375rem .75rem;
   font-size: 1rem;
-  color: var(--light);
+  color: var(--dark);
   background-color: var(--light);
   background-clip: padding-box;
   border-bottom: 1px solid var(--primary);
@@ -77,7 +77,6 @@ button{
   background-color: var(--primary);
   color: var(--light);
   border:seagreen;
-  border-radius: var(--corners);
   box-shadow: var(--shadow);
   text-transform: uppercase;
   transition: all .2s ease;
@@ -85,11 +84,11 @@ button{
   padding: .5em;
 }
 
-danger{
+.danger{
   background-color: var(--danger);
 }
 
-danger:hover{
+.danger:hover{
   background-color: var(--danger-lighten)
 }
 
